# openclound

./: .env.example  .gitignore  .npmrc  Dockerfile  README.md  aegra.json  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  serve.py  tsconfig.json
apps/web/: package.json  tsconfig.json
apps/web/src/: main.ts
configs/biome/: README.md  base.jsonc  next.jsonc  package.json  react.jsonc  solid.jsonc  vue.jsonc
configs/tsconfig/: README.md  base.json  package.json  strict.json
configs/tsconfig/environments/: browser.json  electron.json  next.json  node.json  nuxt.json  react.json  solid.json  vite.json  vue.json
configs/tsconfig/modules/: cjs.json  esm.json
src/agentos/: __init__.py  auth.py  builder.py  config.py  graph.py  http.py  mcp.py  memory.py  middleware.py  model.py  routes.py  spec.py  storage.py
src/omniagent/: __init__.py  auth.py  builder.py  mcp.py
tests/: test_smoke.py
