[project]
name = "agentos"
version = "0.1.0"
description = "agentos: 通用 agent 包(封装 LangChain deepagents)，集成 OpenAI 兼容端点 / MCP / skills,per-assistant 隔离,类 Claude Code,可作 Aegra 部署。"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "August Gao", email = "August.Gao@mspbots.ai" }]
keywords = ["deepagents", "langchain", "langgraph", "agents", "anthropic", "mcp", "litellm"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "deepagents>=0.6.11,<0.7",
    "langchain-anthropic>=1.4.6,<2.0.0",
    "langchain-openai>=1.3.2,<2.0.0",
    "langchain-mcp-adapters>=0.3.0,<0.4.0",
    "langgraph>=1.2.6,<2.0.0",
    "cachetools>=5.3,<7",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    # Aegra 部署运行时(self-hosted LangGraph Platform):提供 `aegra dev/serve/up` CLI,并拉入 aegra-api。
    # 需 Python >=3.12(故本项目 requires-python>=3.12)。
    "aegra-cli>=0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/mspbots/openclound"
Repository = "https://github.com/mspbots/openclound"

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-cachetools>=5.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

# agentos.routes 是 Aegra 部署胶水,依赖 fastapi(随 aegra-api 安装),
# 不纳入核心严格类型检查(部署期由 Aegra 运行时校验)。
[[tool.mypy.overrides]]
module = ["agentos.routes"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
